# GraphWeaver

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
application/: CMakeLists.txt  GraphWeaverAPI.cmake
application/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Console.cpp  Console.hpp  Entity.cpp  Entity.hpp  EventManager.cpp  EventManager.hpp  Hierarchy.cpp  Hierarchy.hpp  Inspector.cpp  Inspector.hpp  Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp
application/core/Scripting/: PyScript.cpp  PyScript.hpp  Script.cpp  Script.hpp
application/graphics/: CMakeLists.txt  Canvas.hpp  Graphics.hpp  Utils.hpp
application/graphics/OpenGL_Implementation/: CMakeLists.txt  Canvas.cpp  DrawManager.cpp  DrawManager.hpp  DrawObject.cpp  DrawObject.hpp  Graphics.cpp  LineObject.cpp  LineObject.hpp  PlaneObject.cpp  PlaneObject.hpp  PointObject.cpp  PointObject.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderUniform.cpp  ShaderUniform.hpp
application/graphics/SDL_Implementation/: CMakeLists.txt  Canvas.cpp  Graphics.cpp
application/python_api/: CMakeLists.txt  PythonAPI.cpp
plugins/DarkTheme/: CMakeLists.txt  main.cpp
scripts/: circle.py  cos_plot.py  sin_plot.py  sin_sum.py
shaders/: canvas_fragment.glsl  canvas_vertex.glsl  default_fragment_shader.glsl  default_vertex_shader.glsl  grid_fragment.glsl  grid_vertex.glsl  point_fragment.glsl  point_vertex.glsl  simple_vertex_shader.glsl
vendors/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/glm/glm/: CMakeLists.txt
